[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes_Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes_Scripts/DefaultHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes_Scripts/EncounterMobHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Music_Sounds/PlayerHit.wav" type="AudioStream" id=4]
[ext_resource path="res://Music_Sounds/PlayerIsHit.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes_Scripts/InventoryHUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes_Scripts/FightingHUD.tscn" type="PackedScene" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="DefaultHUD" parent="." instance=ExtResource( 2 )]

[node name="EncounterMobHUD" parent="." instance=ExtResource( 3 )]

[node name="PlayerHitting" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.098

[node name="PlayerIsHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -13.196

[node name="PlayerDies" type="AudioStreamPlayer2D" parent="."]

[node name="InventoryHUD" parent="." instance=ExtResource( 6 )]

[node name="FightingHUD" parent="." instance=ExtResource( 7 )]
[connection signal="game_over" from="DefaultHUD" to="." method="_on_DefaultHUD_game_over"]
[connection signal="inventory" from="DefaultHUD" to="." method="_on_DefaultHUD_inventory"]
[connection signal="next_room" from="DefaultHUD" to="." method="_on_DefaultHUD_next_room"]
[connection signal="fight" from="EncounterMobHUD" to="." method="_on_EncounterMobHUD_fight"]
[connection signal="run" from="EncounterMobHUD" to="." method="_on_EncounterMobHUD_run"]
[connection signal="back" from="InventoryHUD" to="." method="_on_InventoryHUD_back"]
